Fix height of login-popup box
The submit buttons were popping out of the box.

--- a/static/css/agora.less
+++ b/static/css/agora.less
@@ -286,7 +286,7 @@ ul {
 
 #login-form {
     @width: 600px;
-    @height: 300px;
+    @height: 360px;
     @verticalPadding: 20px;
 
     .box-shadow(0 0 5px 1px rgba(0, 0, 0, 0.3));
